tags/v1.0.2/docs/2.2._APIs_-_Client_Side_Implementation_Notes.md
# APIs: Client Side Implementation Notes
[←APIs - Common Keys ](2.1._APIs_-_Common_Keys.md) · [ Index↑ ](..) · [APIs - Server Side Implementation Notes→](2.3._APIs_-_Server_Side_Implementation_Notes.md)

_(c) AMWA 2016, CC Attribution-ShareAlike 4.0 International (CC BY-SA 4.0)_

## mDNS Bridging

For clients which need to discover the services of a Query API, but operate in software such as web browsers where mDNS is unsupported, it is suggested that a bridging service is employed to present the mDNS (and merged unicast DNS) data via an HTTP service (or similar).

## Failure Modes

The NMOS Registration and Query APIs are designed to be highly available and support failover without any visible consequence for a user operating a system which depends upon them. Recommended handling of common error codes and scenarios is covered in [Behaviour](4.0._Behaviour.md).

## Empty Request Bodies

A number of API resources specify HTTP requests with no request body (headers only). These commonly include HTTP GET, HEAD, OPTIONS and DELETE operations, but may include other HTTP methods in some circumstances. When performing API requests which have no specified request body schema, clients SHOULD NOT send any body payload and SHOULD NOT set the HTTP `Content-Type` header. Clients MAY set the `Content-Length` header to a value of `0` to indicate this empty body, but this is not mandated.

[←APIs - Common Keys ](2.1._APIs_-_Common_Keys.md) · [ Index↑ ](..) · [APIs - Server Side Implementation Notes→](2.3._APIs_-_Server_Side_Implementation_Notes.md)
